syntax = "proto3";

package cognexus.registry;

// Direction of data flow for a port
enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  INPUT = 1;
  OUTPUT = 2;
}

// Specification for a node port
message PortSpec {
  string id = 1;
  string name = 2;
  Direction direction = 3;
  string data_type_id = 4;
}

// Metadata for a data type plugin
message TypeDefinition {
  string id = 1;
  string name = 2;
  string description = 3;
  string version = 4;
}

// Metadata for a node plugin
message NodeDefinition {
  string id = 1;
  string name = 2;
  string description = 3;
  string version = 4;
  repeated PortSpec input_ports = 5;
  repeated PortSpec output_ports = 6;
}